# renikud

./: .gitignore  AGENTS.md  Cargo.toml  README.md  go.mod  go.sum  pyproject.toml
.cursor/plans/: IMPLEMENTATION_SUMMARY.md
.cursor/rules/: use-uv.mdc
aligner/: align  main.go  main_test.go
aligner/testdata/: basic.csv  invalid.csv
docs/: ARCHITECTURE.md  EVALUATION.md  TRAINING.md
grapheme-aligner/: README.md
grapheme-aligner/configs/: hebrew.yaml
grapheme-aligner/src/: dp.py  em.py  infer.py  ipa.py  train.py
plans/: char_aligned_g2p.md
plans/alignment_check/: alignment_check_001.md  alignment_check_001.py
plans/debug_sentence/: debug_sentence.py
plans/nikud_roundtrip/: nikud_roundtrip_001.py
plans/overfit/: overfit_001.py
plans/paprs/: 2506.12311v2.md  ReNikud.md
plans/renikud-journey/: renikud_journey_001.md
plans/structured-upsample-ctc/: structured-upsample-ctc_001.md
renikud-onnx/: README.md
renikud-onnx/examples/: app_g2p.py  basic.py  gradio_app.py
renikud-onnx/scripts/: benchmark.py  export.py
renikud-rs/examples/: phonemize.rs
scripts/: benchmark.py  benchmark_classifier.py  download_checkpoint.sh  export_onnx.sh  extract_pairs.py  prepare_align.py  prepare_dataset.py  prepare_tokens.py  pretrain_mlm.py  split_dataset.py  train.sh  train_bench.sh  train_finetune.sh  train_prepare.sh  train_pretrain.sh  train_scratch.sh  upload_checkpoint.sh
src/: README.md  __init__.py  align_data.py  app.py  checkpoint.py  config.py  constants.py  data.py  data_align.py  data_prepare.py  data_tokenize.py  decoder.py  encoder.py  eval.py  evaluate.py  infer.py  infer_classifier.py  labeling.py  lang_pack.py  metrics.py  model.py  model_classifier.py  nikud.py  optimizer.py  phonology.py  plan.py  prepare_classifier_tokens.py  prepare_data.py  prepare_tokens.py  tags.py  test_model.py  tokenization.py  tokenizer.json  train.py  train_classifier.py
tests/: test_alignment.py
tiny-renikud/: pyproject.toml
(+28 files in other folders)
