[project]
name = "renikud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jiwer>=4.0.0",
    "regex>=2025.11.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typed-argument-parser>=1.11.0",
    "wandb>=0.23.0",
]
