[project]
name = "renikud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "jiwer>=4.0.0",
    "regex>=2026.2.28",
    "tensorboard>=2.20.0",
    "setuptools<81",  # tensorboard needs pkg_resources, removed in setuptools 82
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.2.0",
    "huggingface-hub>=1.5.0",
    "wandb>=0.25.0",
    "accelerate>=1.12.0",
    "xformers>=0.0.35",
]

[project.optional-dependencies]
cu130 = ["torch>=2.10.0"]
cu128 = ["torch>=2.10.0"]

[tool.uv]
conflicts = [
  [{ extra = "cu130" }, { extra = "cu128" }],
]

# CUDA Config

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-cu128", extra = "cu128" },
]

# Makes src/ importable without sys.path hacks — uv run scripts/* just works
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "renikud-onnx",
]


[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
